@@ -120,11 +120,11 @@ public class RewriteFusedRandTest extends AutomatedTestBase
 			//compare matrices 
 			Double ret = readDMLMatrixFromOutputDir("R").get(new CellIndex(1,1));
 			if( testname.equals(TEST_NAME1) )
-				Assert.assertEquals("Wrong result", new Double(rows), ret);
+				Assert.assertEquals("Wrong result", Double.valueOf(rows), ret);
 			else if( testname.equals(TEST_NAME2) )
-				Assert.assertEquals("Wrong result", new Double(Math.pow(rows*cols, 2)), ret);
+				Assert.assertEquals("Wrong result", Double.valueOf(Math.pow(rows*cols, 2)), ret);
 			else if( testname.equals(TEST_NAME3) )
-				Assert.assertEquals("Wrong result", new Double(Math.pow(rows*cols, 2)), ret);
+				Assert.assertEquals("Wrong result", Double.valueOf(Math.pow(rows*cols, 2)), ret);
 			
 			//check for applied rewrites
 			if( rewrites ) {
